--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"	  
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -27,4 +28,3 @@
   },
   "homepage": "https://github.com/vynmetropolia/nodeJS#readme"
 }
-
